--- a/Hist_Quantil_100k_EW.ipynb
+++ b/Hist_Quantil_100k_EW.ipynb
@@ -306,7 +306,7 @@
    "source": [
     "# Hospitalisierungen, show=True,  (AR=70%)\n",
     "\n",
-    "outdir = Path(\"outputs/figures/Hist_Quantil\")\n",
+    "#outdir = Path(\"outputs/figures/Hist_Quantil\")\n",
     "\n",
     "hist_with_quantile_band(\n",
     "    sim,\n",
@@ -342,7 +342,7 @@
    "source": [
     "# Todesfälle (AR=70%), show=True,  (AR=70%)\n",
     "\n",
-    "outdir = Path(\"outputs/figures/Histogramm-Quantil\")\n",
+    "#outdir = Path(\"outputs/figures/Hist_-Quantil\")\n",
     "\n",
     "hist_with_quantile_band(\n",
     "    sim,\n",
@@ -365,59 +365,6 @@
    "source": [
     " >Dargestellt sind der 90%-Bereich (q05–q95), der mittlere 50%-Bereich (q25–q75) und der Median (q50)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "5a792c2e-97a2-438b-b01f-dc77fe9ec74c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Speichern der Grafiken\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "outdir = Path(\"outputs/figures/Histogramm-Quantil\")\n",
-    "outdir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "attack_rates = [0.15, 0.30, 0.50, 0.70]\n",
-    "\n",
-    "for ar in attack_rates:\n",
-    "    hist_with_quantile_band(\n",
-    "        sim,\n",
-    "        attack_rate=ar,\n",
-    "        value_col=\"hosp_total\",\n",
-    "        label=\"Hospitalisierungen gesamt\",\n",
-    "        bins=60,\n",
-    "        tri=tri[\"hosp_per_consult\"],\n",
-    "        norm_label=\"Angaben je 100.000 Einwohner\",\n",
-    "        tri_label=\"Hospitalisierungsrate – Annahme (min / wahrscheinlich / max)\",\n",
-    "        show=False,   # wichtig: nicht im Notebook anzeigen\n",
-    "        outpath=outdir / f\"hosp_total_AR_{int(ar*100):02d}_hist_quantilband_100k.pdf\",\n",
-    "    )\n",
-    "\n",
-    "for ar in attack_rates:\n",
-    "    hist_with_quantile_band(\n",
-    "        sim,\n",
-    "        attack_rate=ar,\n",
-    "        value_col=\"deaths_total\",\n",
-    "        label=\"Todesfälle – gesamt\",\n",
-    "        bins=60,\n",
-    "        tri=tri[\"death_per_consult\"],\n",
-    "        norm_label=\"Angaben je 100.000 Einwohner\",\n",
-    "        tri_label=\"Todesrate – Annahme (min / wahrscheinlich / max)\",\n",
-    "        show=False,   # wichtig: nicht im Notebook anzeigen\n",
-    "        outpath=outdir / f\"deaths_total_AR_{int(ar*100):02d}_hist_quantilband_100k.pdf\",\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d36d852d-1419-49a2-ac92-f4e0c6c91f90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
