--- a/Hist_Quantil_RSK.ipynb
+++ b/Hist_Quantil_RSK.ipynb
@@ -311,7 +311,7 @@
    "source": [
     "# Hospitalisierungen, show=True,  (AR=70%)\n",
     "\n",
-    "outdir = Path(\"outputs/figures/Hist_Quantil\")\n",
+    "#outdir = Path(\"outputs/figures/Hist_Quantil\")\n",
     "\n",
     "hist_with_quantile_band(\n",
     "    sim,\n",
@@ -347,7 +347,7 @@
    "source": [
     "# Todesfälle (AR=70%), show=True,  (AR=70%)\n",
     "\n",
-    "outdir = Path(\"outputs/figures/Histogramm-Quantil\")\n",
+    "#outdir = Path(\"outputs/figures/Hist_Quantil\")\n",
     "\n",
     "hist_with_quantile_band(\n",
     "    sim,\n",
@@ -362,14 +362,6 @@
     "   # outpath=outdir / \"deaths_total_AR_70_hist_quantileband.pdf\",\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b901f220-af5d-4ecc-9bc7-11e5dfbef483",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
